--- a/PozitifLauncher/PozitifLauncher.csproj
+++ b/PozitifLauncher/PozitifLauncher.csproj
@@ -3,10 +3,17 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <UseWPF>true</UseWPF>
-    <StartupObject>PozitifLauncher.Program</StartupObject>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <UseWPF>true</UseWPF>
+    <ApplicationIcon>assets\icedtea\share\pixmaps\javaws.ico</ApplicationIcon>
+    <StartupObject>PozitifLauncher.Program</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="..\assets\**">
+      <Link>assets\%(RecursiveDir)%(Filename)%(Extension)</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
 </Project>
