--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.globalpozitif.giblauncher.Main</mainClass>
+                    <mainClass>com.globalpozitif.giblauncher/com.globalpozitif.giblauncher.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
